--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-homework-template",
+  "name": "goit-react-hw-06-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://goitacademy.github.io/react-homework-template/",
+  "homepage": "https://lifeofscarlet99.github.io/goit-react-hw-06-phonebook/",
   "dependencies": {
     "@emotion/styled": "^11.10.0",
     "@reduxjs/toolkit": "^1.8.4",
